--- a/BugTrackingSystemProjectinjava/Source_Code/Jenkinsfile
+++ b/BugTrackingSystemProjectinjava/Source_Code/Jenkinsfile
@@ -1,24 +1,5 @@
 
-node {
 
-
-       stage('Checkout'){
-
-         echo 'checkout'
-       }
-
-       stage('Test'){
-	   
-		 echo 'test'
-		 
-       }
-
-       stage('Deploy'){
-
-         echo 'Push to Repo'
-
-         echo 'ssh to web server and tell it to pull new image'
-
-       } 
-
+node('linux') {
+  git poll: true, url: 'https://github.com/Sravyarqa/Devops1'
 }
